--- a/index.html
+++ b/index.html
@@ -73,13 +73,13 @@
                             <li><a href="conference.html">Conference</a></li>
                             <li class="has-droupdown"><a href="#">Gallery</a>
                                 <ul class="submenu">
-                                    <li><a href="fellowship.html">Media</a></li>
+                                    <li><a href="media.html">Media</a></li>
                                     <li><a href="#" target="_blank">Innovation & Innovators Award</a></li>
                                 </ul>
                             </li>
                             <li class="has-droupdown"><a href="#">Events</a>
                                 <ul class="submenu">
-                                    <li><a href="#">Upcoming Events</a></li>
+                                    <li><a href="event.html">Upcoming Events</a></li>
                                     <li class="has-droupdown"><a href="#">Webinar</a>
                                         <ul class="submenu">
                                             <li><a href="#">International Association of stemcell and Regnerative Medicine- HealthTAPE</a></li>
@@ -156,13 +156,13 @@
                     <li><a href="conference.html">Conference</a></li>
                             <li class="has-droupdown"><a href="#">Gallery</a>
                                 <ul class="submenu">
-                                    <li><a href="fellowship.html">Media</a></li>
+                                    <li><a href="media.html">Media</a></li>
                                     <li><a href="#" target="_blank">Innovation & Innovators Award</a></li>
                                 </ul>
                             </li>
                             <li class="has-droupdown"><a href="#">Events</a>
                                 <ul class="submenu">
-                                    <li><a href="#">Upcoming Events</a></li>
+                                    <li><a href="event.html">Upcoming Events</a></li>
                                     <li class="has-droupdown"><a href="#">Webinar</a>
                                         <ul class="submenu">
                                             <li><a href="#">International Association of stemcell and Regnerative Medicine- HealthTAPE</a></li>
